<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_meeting_item"
    android:orientation="vertical">

    <TextView
        android:id="@+id/id_meeting_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:text="@string/add_edit_meeting"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="32sp"/>

    <GridLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5">
        <TextView
            android:text="@string/meeting_item_title"
            style="@style/MeetingLableValue_big"
            />
        <TextView
            android:text="@string/meeting_item_start_date"
            style="@style/MeetingLableValue_big"/>

        <TextView
            android:text="@string/meeting_item_end_date"
            style="@style/MeetingLableValue_big"/>

        <TextView
            android:text="@string/meeting_item_location"
            style="@style/MeetingLableValue_big"/>

        <TextView
            android:text="@string/meeting_item_person_number"
            style="@style/MeetingLableValue_big"/>

        <!-- ################################################### -->
        <LinearLayout
            style="@style/MeetingEditValue_big"
            android:orientation="horizontal"
            android:gravity="start">

            <EditText
                android:id="@+id/title_meeting_detail"
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="#FFFF0000"
                tools:ignore="LabelFor"/>
        </LinearLayout>

        <LinearLayout
            style="@style/MeetingEditValue_big"
            android:orientation="horizontal"
            android:gravity="start">

            <EditText
                android:id="@+id/start_time_meeting_detail"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:inputType="none"
                tools:ignore="LabelFor"/>
            <!-- ImageButton
                android:id="@+id/imbtn_start_date_detail"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/pick_date"
                android:src="@drawable/calendar"
                / -->
            <ImageButton
                android:id="@+id/imbtn_start_time_detail"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/pick_time"
                android:src="@drawable/clock"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/MeetingEditValue_big"
            android:orientation="horizontal"
            android:gravity="start">
            <EditText
                android:id="@+id/end_time_meeting_detail"
                android:layout_width="220dp"
                android:inputType="none"
                android:layout_height="match_parent"
                tools:ignore="LabelFor"
                />
            <!-- ImageButton
                android:id="@+id/imbtn_end_date_detail"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/pick_date"
                android:src="@drawable/calendar"
                / -->
            <ImageButton
                android:id="@+id/imbtn_end_time_detail"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/pick_time"
                android:src="@drawable/clock"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/MeetingEditValue_big"
            android:orientation="horizontal"
            android:gravity="start">

            <EditText
                android:id="@+id/location_meeting_detail"
                android:layout_width="280dp"
                android:inputType="none"
                android:layout_height="match_parent"
                tools:ignore="LabelFor"/>
        </LinearLayout>

        <LinearLayout
            style="@style/MeetingEditValue_big"
            android:orientation="horizontal"
            android:gravity="start">

            <EditText
                android:id="@+id/numbers_meeting_detail"
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:inputType="none"
                tools:ignore="LabelFor"/>
        </LinearLayout>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        style="?android:attr/buttonBarStyle"
        >
        <Button
            android:id="@+id/btn_save_meeting"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/btn_save"/>
        <Button
            android:id="@+id/btn_cancel_meeting"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/btn_cancel"
            />

    </LinearLayout>

</LinearLayout>