<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/addFriendFromContract"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_friend_new"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/done"
        app:layout_constraintTop_toBottomOf="@+id/edit_birthday"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.4"/>

    <Button
        android:id="@+id/done"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_birthday"
        app:layout_constraintVertical_bias="0.5"/>


    <EditText
        android:id="@+id/edit_email"
        android:layout_width="297dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="335dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="299dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="278dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintVertical_bias="0.0"
        />

    <EditText
        android:id="@+id/edit_birthday"
        android:layout_width="301dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="text|date"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="384dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="239dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.031"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription=""/>


</android.support.constraint.ConstraintLayout>
